--- a/client/src/components/ui/CardsComponents/card/styles.css
+++ b/client/src/components/ui/CardsComponents/card/styles.css
@@ -4,8 +4,32 @@
   height: 660px;
   border: 2px solid #0b0909;
   margin: 1em;
-  color: #0b0909;
   cursor: pointer;
+  position: relative;
+}
+.card-container button {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+.card-container button p {
+  font-size: 30px;
+  opacity: 0.5;
+  -webkit-transition: 200ms ease-in-out;
+  -o-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+  rotate: 0deg;
+}
+.card-container button p:hover {
+  rotate: 90deg;
+  -webkit-transition: 200ms ease-in-out;
+  -o-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
 }
 .card-container .card-head {
   display: -webkit-box;
@@ -20,6 +44,7 @@
   width: 100%;
   height: 10%;
   border-bottom: 2px solid #0b0909;
+  color: #0b0909;
 }
 .card-container .card-head h1 {
   font-size: 30px;
@@ -63,6 +88,7 @@
           flex-direction: column;
   height: 20%;
   border-top: 2px solid #0b0909;
+  color: #0b0909;
 }
 .card-container .card-foot h1 {
   font-size: 25px;
