--- a/client/src/components/ui/CardsComponents/card/styles.scss
+++ b/client/src/components/ui/CardsComponents/card/styles.scss
@@ -6,8 +6,31 @@
   height: 660px;
   border: 2px solid $primary;
   margin: 1em;
-  color: $primary;
   cursor: pointer;
+  position: relative;
+
+  button {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+
+    p {
+      font-size: 30px;
+      opacity: 0.5;
+      transition: 200ms ease-in-out;
+      rotate: 0deg;
+
+      &:hover {
+        rotate: 90deg;
+        transition: 200ms ease-in-out;
+      }
+    }
+  }
 
   .card-head {
     display: flex;
@@ -16,6 +39,7 @@
     width: 100%;
     height: 10%;
     border-bottom: 2px solid $primary;
+    color: $primary;
 
     h1 {
       font-size: 30px;
@@ -65,6 +89,7 @@
     flex-direction: column;
     height: 20%;
     border-top: 2px solid $primary;
+    color: $primary;
 
     h1 {
       font-size: 25px;
