--- a/client/src/components/routes/styles.css
+++ b/client/src/components/routes/styles.css
@@ -113,69 +113,130 @@ nav .logo {
   height: 60px;
 }
 
-footer {
-  position: relative;
-  width: 100%;
-  height: auto;
+.footer-container {
+  max-width: 2000px;
+  margin: auto;
   color: #0b0909;
+  background-color: #d6d6d6;
 }
-footer h1 {
-  text-align: center;
+.footer-container .brand {
   width: 100%;
-  height: 160px;
-  padding-bottom: 12px;
-  font-size: 100px;
-  background-color: #0b0909;
-  color: #d6d6d6;
-}
-footer .grid {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(100px, 1fr));
-  grid-template-rows: repeat(5, 30px);
-  margin-bottom: 35px;
-  margin-left: 45px;
-  padding-left: 40px;
-  padding-top: 40px;
-  width: 60%;
-  height: 45%;
-  gap: 1em;
-  text-transform: uppercase;
-}
-footer .grid a {
-  font-family: "Kanit", sans-serif;
-  font-weight: 200;
-  color: #0b0909;
-  font-size: 20px;
-}
-footer .join {
-  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  top: 172px;
-  right: 0px;
-  width: 40%;
-  height: 45%;
-  text-transform: uppercase;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-footer .join h2 {
-  padding-top: 5%;
-  padding-left: 20%;
-  font-size: 2.5em;
+.footer-container .brand h1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  height: 20vh;
+  font-size: 6.5vw;
+  background-color: #0b0909;
+  color: #d6d6d6;
 }
-
-.bottom {
+.footer-container .footer {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 70px 0;
+}
+.footer-container .footer .footer-col {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 25%;
+  padding: 0 15px;
+  text-transform: capitalize;
+}
+.footer-container .footer .footer-col h4 {
+  font-size: 18px;
+  margin-bottom: 30px;
+  position: relative;
+}
+.footer-container .footer .footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 30px;
+  background-color: #44444c;
+  height: 2px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 50px;
+}
+.footer-container .footer .footer-col ul {
+  list-style-type: none;
+}
+.footer-container .footer .footer-col ul li {
+  margin-bottom: 10px;
+}
+.footer-container .footer .footer-col ul li a {
+  font-weight: 300;
+  color: #0b0909;
+  text-decoration: none;
+  font-size: 20px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.footer-container .footer .footer-col ul li a:hover {
+  padding-left: 10px;
+  color: white;
+}
+.footer-container .footer .footer-col .linked-list a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(11, 9, 9, 0.2);
+  margin: 0 10px 10px 0;
+  border-radius: 50%;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.footer-container .footer .footer-col .linked-list a:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.footer-container .footer .footer-col .linked-list a img {
+  margin: 10px 0 0 10px;
+  width: 20px;
+  height: 20px;
+}
+@media screen and (max-width: 767px) {
+  .footer-container .footer .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 574px) {
+  .footer-container .footer .footer-col {
+    width: 100%;
+  }
+}
+.footer-container .bottom {
   width: 100%;
   height: auto;
 }
-.bottom div {
+.footer-container .bottom .hr-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -184,27 +245,11 @@ footer .join h2 {
           justify-content: center;
   margin-bottom: 25px;
 }
-.bottom div hr {
+.footer-container .bottom .hr-div hr {
   width: 90%;
 }
-.bottom .links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-.bottom .links h3 {
-  font-size: 20px;
-  margin-left: 5%;
-}
-.bottom .links div {
-  margin-left: 48.5%;
-}
-.bottom .links div a {
-  margin: 0 1em;
-  color: #0b0909;
+.footer-container .bottom h3 {
+  padding: 0 0 10px 82px;
 }
 
 .left {
