--- a/client/src/components/routes/styles.scss
+++ b/client/src/components/routes/styles.scss
@@ -97,92 +97,134 @@ nav {
   }
 }
 
-footer {
-  position: relative;
-  width: 100%;
-  height: auto;
+.footer-container {
+  max-width: 2000px;
+  margin: auto;
   color: $primary;
+  background-color: $white;
 
-  h1 {
-    text-align: center;
+  .brand {
     width: 100%;
-    height: 160px;
-    padding-bottom: 12px;
-    font-size: 100px;
-    background-color: $primary;
-    color: $white;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(100px, 1fr));
-    grid-template-rows: repeat(5, 30px);
-    margin-bottom: 35px;
-    margin-left: 45px;
-    padding-left: 40px;
-    padding-top: 40px;
-    width: 60%;
-    height: 45%;
-    gap: 1em;
-    text-transform: uppercase;
-
-    a {
-      font-family: "Kanit", sans-serif;
-      font-weight: 200;
-      color: $primary;
-      font-size: 20px;
-    }
-  }
-
-  .join {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    top: 172px;
-    right: 0px;
-    width: 40%;
-    height: 45%;
-    text-transform: uppercase;
-
-    h2 {
-      padding-top: 5%;
-      padding-left: 20%;
-      font-size: 2.5em;
-    }
-  }
-}
-
-.bottom {
-  width: 100%;
-  height: auto;
-
-  div {
     display: flex;
     justify-content: center;
-    margin-bottom: 25px;
+    align-items: center;
 
-    hr {
-      width: 90%;
+    h1 {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 20vh;
+      font-size: 6.5vw;
+      background-color: $primary;
+      color: $white;
     }
   }
 
-  .links {
+  .footer {
+    box-sizing: border-box;
     display: flex;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 70px 0;
+
+    .footer-col {
+      box-sizing: border-box;
+      width: 25%;
+      padding: 0 15px;
+      text-transform: capitalize;
+
+      h4 {
+        font-size: 18px;
+        margin-bottom: 30px;
+        position: relative;
+
+        &::before {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 30px;
+          background-color: $secondary;
+          height: 2px;
+          box-sizing: border-box;
+          width: 50px;
+        }
+      }
+
+      ul {
+        list-style-type: none;
+
+        li {
+          margin-bottom: 10px;
+
+          a {
+            font-weight: 300;
+            color: $primary;
+            text-decoration: none;
+            font-size: 20px;
+            transition: all 0.3s;
+
+            &:hover {
+              padding-left: 10px;
+              color: white;
+            }
+          }
+        }
+      }
+
+      .linked-list {
+        a {
+          display: inline-block;
+          height: 40px;
+          width: 40px;
+          background-color: rgba($color: $primary, $alpha: 0.2);
+          margin: 0 10px 10px 0;
+          border-radius: 50%;
+          transition: all 0.3s;
+
+          &:hover {
+            background-color: rgba($color: white, $alpha: 0.2);
+          }
+
+          img {
+            margin: 10px 0 0 10px;
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 767px) {
+      .footer-col {
+        width: 50%;
+        margin-bottom: 30px;
+      }
+    }
+
+    @media screen and (max-width: 574px) {
+      .footer-col {
+        width: 100%;
+      }
+    }
+  }
+
+  .bottom {
+    width: 100%;
+    height: auto;
+
+    .hr-div {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 25px;
+
+      hr {
+        width: 90%;
+      }
+    }
 
     h3 {
-      font-size: 20px;
-      margin-left: 5%;
-    }
-
-    div {
-      margin-left: 48.5%;
-
-      a {
-        margin: 0 1em;
-        color: $primary;
-      }
+      padding: 0 0 10px 82px;
     }
   }
 }
